# bo-coli

./: .gitignore  Dockerfile  README.md  ReadMe.md  h6_simulations.py  pbs_rfknn.py  pyproject.toml
PBS/: download_results.md  h6.pbs  rfknn.pbs
data/ax_clients/: ackley_client.pkl  hartmann6_runs.json
data/bayes_sim/: SGP_init_trial_08_10.pkl  trial_GammaSGP_init_trial_25_10_08.pkl
data/mevalonate_pathway/: ao2c00483_si_002.xlsx  empirical_tester.pkl  noise_fn.pkl  noise_function.pkl  noise_pipeline.pkl  parameters.pkl  quantiles.pkl  readme.md  run_dict.pkl  run_dict_better surface.pkl  run_dict_better.pkl  signal_pipeline.pkl
notebooks/: batch_bayesian_test.ipynb  confirmation_on_empyrical_data.ipynb  hpc_run_analysis.ipynb  sklearn_gp_test.ipynb
src/: BayesClientManager.py  GPVisualiser.py  __init__.py  ax_helper.py  distribution_functions.py
src/gp_and_acq_f/: custom_gp_and_acq_f.py
src/helpers/: MeshGridSlicePlotter.py  __init__.py  empirical_helper.py  gausian_helper.py  hpc_helper.py  theme_branding.py
src/helpers/fonts/brisbane-font-family/: Befonts-License.txt  Trial-LICENSE-BF660e1a3576ea4.txt
src/ui/: SingleGroup.py  __init__.py  footnote.md  main_ui.py
tests/: test_BayesClientManager.py  test_GroupUi.py
