[tool.poetry]
name = "bo-coli"
version = "0.1.0"
description = "Bayesian Optimization for Biological experiments"
authors = ["Povilas Šaučiuvienas <p.sauciuvienas@gmail.com>"]
readme = "README.md"
packages = [{include = "src", from = "."}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "*"
pandas = "*"
ipykernel = "*"
torch = "*"
seaborn = "*"
botorch = "*"
fonttools = "*"
scikit-learn = "*"
ax-platform = "*"
tabulate = "*"
streamlit = "*"
nbformat = "*"
numpydoc = "^1.9.0"
kaleido = "^1.1.0"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
